--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-navigation-transitions": "^1.0.12",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
