--- a/package.json
+++ b/package.json
@@ -11,22 +11,29 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.2.1",
     "@react-navigation/drawer": "^5.3.2",
+    "@react-navigation/material-top-tabs": "^5.1.6",
     "@react-navigation/native": "^5.1.0",
     "@react-navigation/stack": "^5.2.1",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-av": "^8.1.0",
     "firebase": "^7.12.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-nodemediaclient": "^0.1.6",
     "react-native-reanimated": "~1.4.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "^2.0.0-alpha.12",
+    "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^4.4.5",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^9.0.2",
     "react-navigation-transitions": "^1.0.12",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
